# SmartFridge

./: .gitignore  Dockerfile.render  README.md  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  gemini_client.py  ingredient_extractor.py  main.py  models.py  openai_vision_client.py  photo_analysis.py  recipe_indexer.py  recipe_refiner.py  recipe_search.py  recommendations.py  worker.py
backend/scripts/: __init__.py  benchmark_pipeline.py  index_recipes.py
backend/terraform/: main.tf
backend/tests/: test_api.py  test_benchmark_pipeline.py  test_gemini_client.py  test_ingredient_extractor.py  test_photo_analysis.py  test_recipe_indexer.py  test_recipe_refiner.py  test_recipe_search.py  test_worker.py
docs/: architecture.md  benchmarking.md  deployment.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
