[project]
name = "smartfridge-backend"
version = "0.1.0"
description = "Backend API for SmartFridge recipe recommendations"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.12",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
